--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.3.2",
     "firebase": "^9.6.10",
     "next": "12.1.5",
     "react": "18.0.0",
